Update example.